[build-system]
requires = ["setuptools", "wheel","cython"]
build-backend = "setuptools.build_meta"

[tool.build-system]
requires = ["setuptools", "wheel","cython"]
build-backend = "setuptools.build_meta"


[metadata]
name = "ip2asn"
version = "0.0.1"
author = "bymoye"
author_email = "s3moye@gmail.com"
readme = "README.md"
description = "A ip2asn tools for python."
url = "https://github.com/bymoye/ip2asn"

[options]
python_requires = ">=3.8"